toast alignment fix

--- a/src/app/shared/toast/toast.component.css
+++ b/src/app/shared/toast/toast.component.css
@@ -17,3 +17,7 @@
   transform: translateY(-100%);
   -webkit-transform: translateY(-100%);
 }
+
+.p-t-4 {
+  padding-top: 4px;
+}
